--- a/app/src/main/res/layout/drawer_top.xml
+++ b/app/src/main/res/layout/drawer_top.xml
@@ -5,14 +5,15 @@
     android:gravity="center"
     android:orientation="vertical" >
 
-     <ImageView
+    <ImageView
         android:id="@+id/imageView1"
-        android:src="@drawable/drawer_header"
+        android:layout_width="match_parent"
+        android:foreground="#99000000"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:maxHeight="195dp"
         android:scaleType="centerCrop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:src="@drawable/drawer_header" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,12 +24,13 @@
         android:background="@drawable/drawer_top_gradient"
         android:paddingLeft="20dp"
         android:paddingTop="20dp"
-        android:paddingBottom="10dp"
         android:paddingRight="10dp"
+        android:paddingBottom="10dp"
         android:text="@string/app_name"
-        android:textSize="32sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="32sp" />
 
 
 
